--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,5 @@
 @import url(custom/footer.scss);
 @import url(custom/header.scss);
 @import url(custom/variables.scss);
+
+/*# sourceMappingURL=styles.css.map */
