--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,297 @@
-@import url(custom/body.scss);
-@import url(custom/footer.scss);
-@import url(custom/header.scss);
-@import url(custom/variables.scss);
+/* line 1, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_header.scss */
+nav {
+  padding: 0.5rem 0;
+}
+
+/* line 4, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_header.scss */
+nav ul {
+  margin: 0;
+}
+
+/* line 1, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_footer.scss */
+footer {
+  background-color: #EAE7D2;
+  padding: 0.5rem;
+}
+
+/* line 4, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_footer.scss */
+footer p, footer li, footer a {
+  color: #1D3622;
+}
+
+/* line 1, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+h1, h2, h3, p, li, a {
+  color: #EAE7D2;
+}
+
+/* line 5, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+h1, h2 {
+  font-family: "baskerville-urw", serif;
+  font-weight: 700;
+  font-size: 1.7rem;
+}
+
+/* line 10, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+h3 {
+  font-family: "baskerville-urw", serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+
+/* line 16, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+p, li, a {
+  font-family: "lato", sans-serif;
+  font-size: 1rem;
+}
+
+/* line 21, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+li {
+  list-style: none;
+}
+
+/* line 25, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+body {
+  background-color: #1D3622;
+  background-image: url(../../images/pattern-gold.png);
+}
+
+/* line 30, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.tan {
+  background-color: #EAE7D2;
+}
+
+/* line 32, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.tan .text {
+  padding: 2.5rem;
+}
+
+/* line 35, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.tan h1, .tan h2, .tan h3, .tan p, .tan li, .tan a {
+  color: #1D3622;
+}
+
+/* line 39, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.relative {
+  position: relative;
+}
+
+/* line 43, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.absolute {
+  position: absolute;
+}
+
+/* line 46, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.filter {
+  filter: contrast(90%);
+  filter: hue-rotate(20deg);
+  filter: brightness(70%);
+}
+
+/* line 51, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.hero {
+  margin-top: 0;
+}
+
+/* line 53, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.hero p {
+  font-style: italic;
+}
+
+/* line 56, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.hero .absolute {
+  left: 40%;
+  bottom: 10%;
+}
+
+/* line 59, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.hero .absolute .title {
+  bottom: 5rem;
+}
+
+/* line 64, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.hero .subhead {
+  font-style: italic;
+  text-align: right;
+  margin-right: 0%;
+}
+
+/* line 68, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.hero .subhead :before {
+  content: "";
+  position: absolute;
+  width: 26%;
+  height: 0.4%;
+  background: #fff;
+  left: 0%;
+  top: 50%;
+}
+
+/* line 80, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gradient {
+  color: #1D3622;
+  z-index: 100;
+  top: 0;
+  left: 0;
+}
+
+/* line 92, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+section {
+  padding: 1rem 0;
+}
+
+/* line 96, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.headingline {
+  padding: 0.3% 5%;
+  background-color: #fff;
+}
+
+/* line 104, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.main .subhead {
+  font-style: italic;
+  text-align: right;
+  margin-right: 10%;
+}
+
+/* line 108, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.main .subhead :before {
+  content: "";
+  position: absolute;
+  width: 20%;
+  height: 0.4%;
+  background: #1D3622;
+  left: 18%;
+  top: 34.5%;
+}
+
+/* line 120, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.map {
+  padding: 1rem;
+}
+
+/* line 124, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.explore h2 {
+  padding-top: 2rem;
+}
+
+/* line 129, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.about .subhead {
+  font-style: italic;
+  text-align: right;
+  margin-right: 19%;
+}
+
+/* line 134, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.about .subhead :before {
+  content: "";
+  position: absolute;
+  width: 38%;
+  height: 0.3%;
+  background: #fff;
+  left: 21%;
+  top: 25%;
+}
+
+/* line 148, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.explore .subhead {
+  text-align: right;
+  margin-right: 5%;
+}
+
+/* line 151, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.explore .subhead :before {
+  content: "";
+  position: absolute;
+  width: 22%;
+  height: 0.4%;
+  background: #1D3622;
+  left: 30%;
+  top: 76%;
+}
+
+/* line 161, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.explore .map {
+  padding-bottom: 1rem;
+}
+
+/* line 167, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.locations li {
+  margin-bottom: 2rem;
+}
+
+/* line 172, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery {
+  margin-bottom: 3rem;
+}
+
+/* line 174, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery .subhead {
+  font-style: italic;
+  text-align: right;
+  margin-right: 34.5%;
+}
+
+/* line 179, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery .subhead :before {
+  content: "";
+  position: absolute;
+  width: 15%;
+  height: 0.3%;
+  background: #fff;
+  left: 34%;
+  top: 68%;
+}
+
+/* line 192, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.hero {
+  margin-bottom: 2rem;
+}
+
+/* line 195, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.main {
+  margin-bottom: 2rem;
+}
+
+/* line 199, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.about {
+  margin-bottom: 2rem;
+}
+
+/* line 204, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.locations h3 {
+  margin-bottom: 0;
+}
+
+/* line 211, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery img {
+  filter: brightness(100%);
+  transition: filter, 0.3s;
+}
+
+/* line 215, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery img:hover {
+  filter: brightness(40%);
+}
+
+/* line 218, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery .heart:hover {
+  filter: brightness(100%);
+}
+
+/* line 221, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery .heart {
+  width: 60%;
+}
+
+/* line 225, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery .absolute p {
+  position: absolute;
+}
+
+/* line 230, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
+.gallery .absolute img {
+  position: absolute;
+  top: 75%;
+  right: -20%;
+}
 
 /*# sourceMappingURL=styles.css.map */
