--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,4 @@
-@import url(custom/body.scss);
-@import url(custom/footer.scss);
-@import url(custom/header.scss);
-@import url(custom/variables.scss);
+@import "custom/variables.scss";
+@import "custom/header.scss";
+@import "custom/footer.scss";
+@import "custom/body.scss";
