all better background

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ a:hover {
 /* line 42, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
 body {
   background-color: #1D3622;
-  background-image: url(../../images/pattern-gold.png);
+  background-image: url(../images/pattern-gold.png);
 }
 
 /* line 47, ../../../Documents/coding/destination/Turner_Destination/sass/custom/_body.scss */
