--- a/sass/custom/_body.scss
+++ b/sass/custom/_body.scss
@@ -41,7 +41,7 @@ a:hover {
 
 body {
     background-color: $dark-green;
-    background-image: url(../../images/pattern-gold.png);
+    background-image: url(../images/pattern-gold.png);
 }
 
 body#hateno {
